# rust-edge-gateway

./: .env.example  COMPLETION_REPORT.md  Caddyfile  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.cross  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPORT_API_KEY_AUTH.md  LICENSE  README.md  READY_TO_USE.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SESSION_AUTH_IMPLEMENTATION.md  SQLITE_QUICK_START.md  SQLITE_SETUP_GUIDE.md  START_HERE.md  VISUAL_QUICK_REFERENCE.md  docker-compose.prod.yml  docker-compose.yml  hello_world_handler.rs  test-import-api.sh  test_admin_init.ps1  test_security_comprehensive.sh  test_security_features.ps1
crates/edge-hive-gateway/src/: db.rs  router.rs
crates/rust-edge-gateway/: Cargo.toml
crates/rust-edge-gateway-sdk/: Cargo.toml
crates/rust-edge-gateway-sdk/src/: error.rs  handler.rs  ipc.rs  lib.rs  request.rs  response.rs  sqlite.rs  storage.rs
crates/rust-edge-gateway/src/: admin_auth.rs  api.rs  bundle.rs  compiler.rs  config.rs  db.rs  db_admin.rs  main.rs  openapi.rs  rate_limit.rs  router.rs  session.rs
crates/rust-edge-gateway/src/admin_auth/: handlers.rs  mod.rs  recaptcha.rs  routes.rs
crates/rust-edge-gateway/src/runtime/: actor.rs  context.rs  handler.rs  mod.rs
crates/rust-edge-gateway/src/runtime/bundle/: deploy.rs  manifest.rs  mod.rs
crates/rust-edge-gateway/src/runtime/services/: cache.rs  database.rs  minio_bridge.rs  mod.rs  storage.rs
crates/rust-edge-gateway/src/services/: memcached.rs  minio.rs  mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  remote_sqlite.rs  sqlite.rs
data/: admin.db  edge_hive.db  rust_edge_gateway.db
docs/: book.toml
docs-content/: intro.md
docs-content/api/: endpoints.md
docs-content/migration/: overview.md
docs/book/: 404.html  CNAME  index.html  print.html  searchindex.js  toc.html  toc.js
docs/book/api/: collections.html  domains.html  endpoints.html  management.html  openapi.yaml  services.html
docs/book/architecture/: graceful-draining.html  handler-registry.html  overview.html  service-actors.html
docs/book/examples/: error-handling.html  hello-world.html  json-api.html  path-params.html  petstore.html  query-params.html
docs/book/getting-started/: first-handler.html  lifecycle.html  quick-start.html
docs/book/sdk/: context.html  errors.html  handlers.html  request.html  response.html  services.html
docs/book/sdk/services/: database.html  email.html  ftp.html  redis.html  storage.html
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: collections.md  domains.md  endpoints.md  management.md  openapi.yaml  services.md
docs/src/architecture/: service-actors.md
docs/src/examples/: error-handling.md  hello-world.md  json-api.md  path-params.md  petstore.md  query-params.md
docs/src/getting-started/: first-handler.md  lifecycle.md  quick-start.md
docs/src/sdk/: errors.md  handlers.md  request.md  response.md  services.md
docs/src/sdk/services/: database.md  redis.md  storage.md
examples/handlers/: README.md
examples/handlers/minio-storage/: handler.rs
examples/hello-world/test-bundle/handlers/: hello_world.rs
examples/petstore/: petstore.yaml  schema.sql  setup.sh
examples/petstore/handlers/: create_pet.rs  delete_pet.rs  get_pet.rs  list_pets.rs  update_pet.rs
examples/services/minio/: provider.rs
handlers/03005bb9-8d98-4853-93d6-e4664c1ca66d/: Cargo.toml
handlers/40d1ae91-01be-4b92-ba1b-fc3093b366a4/: Cargo.toml
handlers/40d1ae91-01be-4b92-ba1b-fc3093b366a4/src/: handler.rs  main.rs
handlers/a-icon-sqlite-test/: Cargo.toml
handlers/a-icon-sqlite-test/src/: handler.rs  lib.rs  main.rs
scripts/: build-and-publish.ps1  build-and-publish.sh  cleanup-sqlite-service.sh  deploy-to-droplet.ps1  deploy-to-droplet.sh  fix-env-remote.ps1  update-api-key-permissions.sh
static/admin/: app.js  index.html  login.html  openapi.yaml
static/auth/: login.html
