[package]
name = "rust-edge-gateway-sdk"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDK for writing Rust Edge Gateway handlers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
base64 = "0.22"

# Optional async runtime support
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
