[package]
name = "rust-edge-gateway"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Rust Edge Gateway and Worker Supervisor"

[[bin]]
name = "rust-edge-gateway"
path = "src/main.rs"

[dependencies]
rust-edge-gateway-sdk = { path = "../rust-edge-gateway-sdk" }
tokio = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
serde_yaml = "0.9.34"
openapiv3 = "2.2.0"
zip = "2.2"
tempfile = "3.14"

# New dependencies for redesign
libloading = "0.8"
futures = "0.3"
pin-project-lite = "0.2"
dashmap = "6"
base64 = "0.22"
regex-lite = "0.1"
bytes = "1"

# S3/MinIO client (rust-s3 is more compatible than aws-sdk-s3)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
bcrypt = "0.13"
