[package]
name = "handler_03005bb9_8d98_4853_93d6_e4664c1ca66d"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
edge-hive-sdk = { path = "../../crates/edge-hive-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
