[package]
name = "handler_40d1ae91_01be_4b92_ba1b_fc3093b366a4"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
edge-hive-sdk = { path = "../../crates/edge-hive-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
